# ceilometer-fiware

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ceilometer_fiware/host/: cmd.py  discovery.py  host.py
ceilometer_fiware/region/: cmd.py  discovery.py  measures.json  region.py
ceilometer_fiware/tests/: test_region.py
devstack/: README.rst  plugin.sh  settings
etc/ceilometer/: ceilometer.conf  polling.yaml
