[metadata]
name = ceilometer-fiware
summary = FIWARE Region Ceilometer Pollster.
description-file = README.md
author = Rising for FIWARE
author-email = rising@fbk.eu
home-page = https://github.com/SmartInfrastructures/ceilometer-fiware
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
ceilometer.poll.central =
    region = ceilometer_fiware.region.region:RegionPollster
    host = ceilometer_fiware.host.host:HostPollster

ceilometer.discover.central =
    region = ceilometer_fiware.region.discovery:RegionDiscovery
    host = ceilometer_fiware.host.discovery:HostDiscovery

console_scripts =
    pollster_test_fiware_region = ceilometer_fiware.region.cmd:main
    pollster_test_fiware_host = ceilometer_fiware.host.cmd:main    

[files]
packages = ceilometer_fiware
